# model-runner

./: .gitignore  .golangci.yml  .versions  AGENTS.md  Cargo.toml  Dockerfile  Llama 3_3.md  Makefile  Makefile.common  README.md  SECURITY.md  agentica-deepcoder.md  backends_vllm_stub.go  deepseek-r1.md  diffusers_backend.go  diffusers_backend_stub.go  gemma3-qat.md  gemma3.md  go.mod  go.sum  go.work.sum  inspect-oci.sh  llama 3_3.md  llama3_1.md  llama3_2-instruct.md  llama3_2.md  main.go  main_test.go  mistral 7B Instruct v0.2.md  mistral nemo Instruct 2407.md  mxbai embed large v1.md  phi4.md  qwen2.5.md  qwq.md  smolllm2.md  smollm2.md  template.md  vllm_backend.go  vllm_backend_stub.go
.gemini/: config.yaml
.github/: dependabot.yaml
ai/: deepcoder-preview.md  deepseek-r1-distill-llama.md  deepseek3.2.md  devstral-small.md  functiongemma.md  gemma3-qat.md  gemma3.md  gemma3n.md  gpt-oss-safeguard.md  gpt-oss.md  granite-4.0-h-nano.md  granite-4.0-h-tiny.md  granite-4.0-nano.md  granite-embedding-multilingual.md  kimi-k2-vllm.md  llama3.1.md  llama3.2.md  llama3.3.md  magistral-small-3.2.md  ministral3.md  mistral-nemo.md  mistral.md  moondream2.md  mxbai-embed-large.md  nomic-embed-text-v1.5.md  phi4.md  qwen2.5.md  qwen3-coder-next-vllm.md  qwen3-coder.md  qwen3-embedding-vllm.md  qwen3-embedding.md  qwen3-reranker-vllm.md  qwen3.md  qwq.md  seed-oss.md  smollm2.md  snowflakw-arctic-embed-l-v2-vllm.md
assets/: camera-demo.html
dmr-common/: Cargo.toml
e2e/: e2e_test.go  (+1 more)
router/: Cargo.toml  dmr_router.h
router/src/: cors.rs  lib.rs  proxy.rs  routes.rs
(+506 files in other folders)
